Add some features

--- a/experience/index.html
+++ b/experience/index.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Prem </title>
+    <title>Experience | Portfolio Prem Vishwakarma </title>
 </head>
 <!-- <body oncontextmenu="return false"> -->
 
 <!-- navbar starts -->
 <header>
-        <!-- <a href="/" class="logo"><i class="fab fa-node-js"></i> Prem</a> -->
-
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -45,23 +43,47 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Bharat Intern</h2>
+          <h2>CodeAlpha</h2>
         </div>
         <div class="desc">
-            <h3>Web Developement | Internship</h3>
-            <p>March 2024 - April 2024</p>
+            <h3>Web Developement Intern | Internship</h3>
+            <p>June 2024 - July 2024</p>
         </div>
       </div>
     </div>
 
-    <div class="container right">
+      <div class="container right">
         <div class="content">
           <div class="tag">
-            <h2>Google Developer Student Club (GDSC) </h2>
+            <h2>Oasis Infobyte</h2>
           </div>
           <div class="desc">
-              <h3>Member | Full-Time</h3>
-              <p>October 2023 - Present</p>
+              <h3>Web Developement & Designing Intern | Internship</h3>
+              <p>May 2024 - June 2024</p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="container left">
+        <div class="content">
+          <div class="tag">
+            <h2>CodSoft</h2>
+          </div>
+          <div class="desc">
+              <h3>Web Developement Intern | Internship</h3>
+              <p>May 2024 - June 2024</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>Bharat Intern</h2>
+          </div>
+          <div class="desc">
+              <h3>Web Developement Intern | Internship</h3>
+              <p>March 2024 - April 2024</p>
           </div>
         </div>
       </div>
@@ -69,10 +91,10 @@
       <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>Engineering Student</h2>
+            <h2>DryCode</h2>
           </div>
           <div class="desc">
-              <h3> Student | Full-Time</h3>
+              <h3>Web Developement Intern | Internship</h3>
               <p>October 2022 - Present</p>
           </div>
         </div>
@@ -80,11 +102,11 @@
 
   </div>
 
-   <div class="morebtn">
+  <div class="morebtn">
     <a href="/#experience" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
-  </a>
+    </a>
   </div> 
 
 </div>
