--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <!-- <body oncontextmenu="return false"> -->
 <header>
-        <!-- <a href="/" class="logo"><i class="fab fa-node-js"></i> Prem</a> -->
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Prem</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -71,7 +71,7 @@
     </div>
     <div class="content">
         <h3>I'm Prem</h3>
-        <span class="tag">Front-end Developer</span>
+        <span class="tag">Computer Science & Engineering Student</span>
         
         <p>I am an aspiring Web Developement. 
           Currently purusing Bachelor of Technology (Computer Science and Engineering).
@@ -85,13 +85,13 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> pvishwakarma150904@gmail.com</p>
+              <p><span> email : </span> pvishwakarma1509@gmail.com</p>
               <p><span> place : </span> Lucknow, India - 226021</p>
             </div>
         </div>
         
         <div class="resumebtn">
-            <a href="assets/PremResume.pdf" target="_blank" class="btn"><span>Resume</span>
+            <a href="assets/Prem'sResume.pdf" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -176,7 +176,7 @@
 
   <div class="box-container">
 
-  <div class="box tilt">
+  <!-- <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
       <div class="content">
         <div class="tag">
@@ -190,7 +190,7 @@
           </div>
         </div>
       </div>
-    </div> 
+    </div>  -->
 
 </div>
 
@@ -209,42 +209,43 @@
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
   <div class="timeline">
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Bharat Intern</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Developement | Internship</h3>
-            <p>March 2024 - April 2024</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <div class="tag">
-        <h2>Google Developer Students Club (GDSC) </h2>
-      </div>
-      <div class="desc">
-          <h3>Member | Full-Time</h3>
-          <p>October 2023 - Present</p>
-      </div>
-    </div>
-  </div>
+  <!-- </div> -->
 
   <div class="container left">
     <div class="content">
       <div class="tag">
-        <h2>Engineering Student</h2>
+        <h2>Oasis Infobyte</h2>
       </div>
       <div class="desc">
-          <h3> Student | Full-Time</h3>
-          <p>October 2022 - Present</p>
+          <h3>Web Developement and designing Intern | Internship</h3>
+          <p>June 2023 - July 2024</p>
       </div>
     </div>
   </div>
+
+  <div class="container right">
+    <div class="content">
+      <div class="tag">
+        <h2>CodSoft</h2>
+      </div>
+      <div class="desc">
+          <h3>Web Developement Intern | Internship</h3>
+          <p>May 2024 - June 2024</p>
+      </div>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <div class="tag">
+        <h2>Bharat Intern</h2>
+      </div>
+      <div class="desc">
+          <h3>Web Developement Intern | Internship</h3>
+          <p>March 2024 - April 2024</p>
+      </div>
+    </div>
+  </div>
+</div>
 
  <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
