--- a/projects/index.html
+++ b/projects/index.html
@@ -14,8 +14,6 @@
 
 <!-- navbar starts -->
 <header>
-        <!-- <a href="/" class="logo"><i class="fab fa-node-js"></i> Prem</a> -->
-
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -37,12 +35,30 @@
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
   
   <div id="filters" class="button-group">
-    <button class="btn is-checked" data-filter="*">Amazon Clone</button>
-    <button class="btn" data-filter=".mern">Order My Book</button>
-    <button class="btn" data-filter=".basicweb">3D Card Animation Image</button>
+    <button class="btn is-checked" data-filter="*">All Projects</button>
+    <button class="btn" data-filter=".mern">React.js(Password Manager)</button>
+    <button class="btn" data-filter=".basicweb">Rect.js(To-do List)</button>
+    <button class="btn" data-filter=".basicweb">HTML5(Weather Web App)</button>
+    <button class="btn" data-filter=".basicweb">HTML5(Qwiz App)</button>
+    <button class="btn" data-filter=".basicweb">HTML5(Basic Calculator)</button>
   </div>
    
-
+  <div class="box-container">
+     <!-- <div class="box tilt">
+      <img src="/assets/images/projects/agecalc.PNG" alt="" />
+      <div class="content">
+        <div class="tag">
+        <h3>Portfolio Website</h3>
+        </div>
+        <div class="desc">
+          <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div> -->  
   </div>
 
   <div class="backbtn">
