--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/p-vish/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/pvishwakarma09" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/er._vishwakarma_prem_09?igsh=M25jeTJvZmVwanY1"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="YouTube" aria-label="YouTube" href="https://youtube.com/@PvCoding09?si=RDqaiQyKctSkDLL4" target="_blank"><i class="fab fa-youtube"></i></a></li>
+          <li><a class="dev" aria-label="Dev" href="https://dev.to/pvishwakarma09" target="_blank"><i class="fab fa-dev"></i></a></li>
         </ul>
       </div>
     </div>
