--- a/projects/index.html
+++ b/projects/index.html
@@ -37,10 +37,10 @@
   <div id="filters" class="button-group">
     <button class="btn is-checked" data-filter="*">All Projects</button>
     <button class="btn" data-filter=".mern">React.js(Password Manager)</button>
-    <button class="btn" data-filter=".basicweb">Rect.js(To-do List)</button>
+    <!-- <button class="btn" data-filter=".basicweb">Rect.js(To-do List)</button>
     <button class="btn" data-filter=".basicweb">HTML5(Weather Web App)</button>
     <button class="btn" data-filter=".basicweb">HTML5(Qwiz App)</button>
-    <button class="btn" data-filter=".basicweb">HTML5(Basic Calculator)</button>
+    <button class="btn" data-filter=".basicweb">HTML5(Basic Calculator)</button> -->
   </div>
    
   <div class="box-container">
