--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="assets/Prem'sResume.pdf" target="_blank" class="btn"><span>Resume</span>
+            <a href="assets/js/PremVishwakarmaResume.pdf" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
