updated experience section

--- a/experience/index.html
+++ b/experience/index.html
@@ -95,7 +95,7 @@
           </div>
           <div class="desc">
               <h3>Web Developement Intern | Internship</h3>
-              <p>October 2022 - Present</p>
+              <p>March 2024 - April 2024</p>
           </div>
         </div>
       </div>
