update profile image and add experience section

--- a/experience/index.html
+++ b/experience/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Prem Vishwakarma </title>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
+
+  <title>Experience | Portfolio Prem Vishwakarma </title>
 </head>
 <!-- <body oncontextmenu="return false"> -->
 
 <!-- navbar starts -->
 <header>
-        <div id="menu" class="fas fa-bars"></div>
-        <nav class="navbar">
-            <ul>
-            <li><a href="/#home">Home</a></li>
-            <li><a href="/#about">About</a></li>
-            <li><a href="/#skills">Skills</a></li>
-            <li><a href="/#education">Education</a></li>
-            <li><a href="/#work">Work</a></li>
-            <li><a class="active" href="/#experience">Experience</a></li>
-            <li><a href="/#contact">Contact</a></li>
-            </ul>
-        </nav>
+  <div id="menu" class="fas fa-bars"></div>
+  <nav class="navbar">
+    <ul>
+      <li><a href="/#home">Home</a></li>
+      <li><a href="/#about">About</a></li>
+      <li><a href="/#skills">Skills</a></li>
+      <li><a href="/#education">Education</a></li>
+      <li><a href="/#work">Work</a></li>
+      <li><a class="active" href="/#experience">Experience</a></li>
+      <li><a href="/#contact">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <!-- navbar ends -->
 
@@ -35,7 +38,8 @@
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
   <div class="quote">
-      <span>Every experience in your life is being orchestrated to teach you something you need to know to move forward.</span>
+    <span>Every experience in your life is being orchestrated to teach you something you need to know to move
+      forward.</span>
   </div>
 
   <div class="timeline">
@@ -43,73 +47,84 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
+          <h2>Google Developer Group</h2>
+        </div>
+        <div class="desc">
+          <h3>Web Developement Mentor</h3>
+          <p>Oct 2024 - Present</p>
+        </div>
+      </div>
+    </div>
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
           <h2>CodeAlpha</h2>
         </div>
         <div class="desc">
-            <h3>Web Developement Intern | Internship</h3>
-            <p>June 2024 - July 2024</p>
+          <h3>Web Developement Intern | Internship</h3>
+          <p>June 2024 - July 2024</p>
         </div>
       </div>
     </div>
 
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Oasis Infobyte</h2>
-          </div>
-          <div class="desc">
-              <h3>Web Developement & Designing Intern | Internship</h3>
-              <p>May 2024 - June 2024</p>
-          </div>
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Oasis Infobyte</h2>
+        </div>
+        <div class="desc">
+          <h3>Web Developement & Designing Intern | Internship</h3>
+          <p>May 2024 - June 2024</p>
         </div>
       </div>
-      
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>CodSoft</h2>
-          </div>
-          <div class="desc">
-              <h3>Web Developement Intern | Internship</h3>
-              <p>May 2024 - June 2024</p>
-          </div>
-        </div>
-      </div>
+    </div>
 
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Bharat Intern</h2>
-          </div>
-          <div class="desc">
-              <h3>Web Developement Intern | Internship</h3>
-              <p>March 2024 - April 2024</p>
-          </div>
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>CodSoft</h2>
+        </div>
+        <div class="desc">
+          <h3>Web Developement Intern | Internship</h3>
+          <p>May 2024 - June 2024</p>
         </div>
       </div>
+    </div>
 
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>DryCode</h2>
-          </div>
-          <div class="desc">
-              <h3>Web Developement Intern | Internship</h3>
-              <p>March 2024 - April 2024</p>
-          </div>
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Bharat Intern</h2>
+        </div>
+        <div class="desc">
+          <h3>Web Developement Intern | Internship</h3>
+          <p>March 2024 - April 2024</p>
         </div>
       </div>
+    </div>
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>DryCode</h2>
+        </div>
+        <div class="desc">
+          <h3>Web Developement Intern | Internship</h3>
+          <p>March 2024 - April 2024</p>
+        </div>
+      </div>
+    </div>
 
   </div>
 
   <div class="morebtn">
     <a href="/#experience" class="btn">
-        <i class="fas fa-arrow-left"></i>
-        <span>Back to Home</span>
+      <i class="fas fa-arrow-left"></i>
+      <span>Back to Home</span>
     </a>
-  </div> 
+  </div>
 
-</div>
+  </div>
 </section>
 <!-- experience section ends -->
 
@@ -118,36 +133,38 @@
 
   <div class="box-container">
 
-      <div class="box">
-          <h3>Prem Vishwakarma</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
-      </div>
+    <div class="box">
+      <h3>Prem Vishwakarma</h3>
+      <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br /> <br /> Keep Rising
+        🚀. Connect with me over live chat!</p>
+    </div>
 
-      <div class="box">
-          <h3>quick links</h3>
-          <a href="/#home"><i class="fas fa-chevron-circle-right"></i> home</a>
-          <a href="/#about"><i class="fas fa-chevron-circle-right"></i> about</a>
-          <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
-          <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
-          <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
-      </div>
+    <div class="box">
+      <h3>quick links</h3>
+      <a href="/#home"><i class="fas fa-chevron-circle-right"></i> home</a>
+      <a href="/#about"><i class="fas fa-chevron-circle-right"></i> about</a>
+      <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
+      <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
+      <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
+      <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+    </div>
 
-      <div class="box">
-          <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 933-357-0954</p>
-          <p> <i class="fas fa-envelope"></i>pvishwakarma150904@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Lucknow, India-226021</p>
-          <div class="share">
+    <div class="box">
+      <h3>contact info</h3>
+      <p> <i class="fas fa-phone"></i>+91 933-357-0954</p>
+      <p> <i class="fas fa-envelope"></i>pvishwakarma150904@gmail.com</p>
+      <p> <i class="fas fa-map-marked-alt"></i>Lucknow, India-226021</p>
+      <div class="share">
 
-            <a href="https://www.instagram.com/er._vishwakarma_prem_09?igsh=M25jeTJvZmVwanY1" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/pvishwakarma09" class="fab fa-github" target="_blank"></a>
-            <a href="https://youtube.com/@PvCoding09?si=RDqaiQyKctSkDLL4" class="fab fa-youtube" aria-label="YouTube" target="_blank"></a>
-          </div>
+        <a href="https://www.instagram.com/er._vishwakarma_prem_09?igsh=M25jeTJvZmVwanY1" class="fab fa-linkedin"
+          target="_blank"></a>
+        <a href="https://github.com/pvishwakarma09" class="fab fa-github" target="_blank"></a>
       </div>
+    </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/p-vish/"> Prem Vishwakarma</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/p-vish/">
+      Prem Vishwakarma</a></h1>
 
 </section>
 <!-- footer section ends -->
@@ -159,7 +176,9 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
 <!-- jquery cdn -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+  integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- scroll reveal anim -->
 <script src="https://unpkg.com/scrollreveal"></script>
@@ -168,4 +187,5 @@
 <script src="./script.js"></script>
 
 </body>
+
 </html>
