--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="assets/images/profile22.jpg" alt="fisrt image">
+    <img draggable="false" class="tilt" src="assets/images/prem.jpg" alt="fisrt image">
 </div>
 </section>
 <!-- hero section ends -->
@@ -67,7 +67,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="assets/images/profile2.jpg" alt="image">
+        <img draggable="false" class="tilt" src="assets/images/prem.jpg" alt="image">
     </div>
     <div class="content">
         <h3>I'm Prem</h3>
@@ -214,11 +214,11 @@
   <div class="container left">
     <div class="content">
       <div class="tag">
-        <h2>Oasis Infobyte</h2>
+        <h2>Google Developer Group</h2>
       </div>
       <div class="desc">
-          <h3>Web Developement and designing Intern | Internship</h3>
-          <p>June 2023 - July 2024</p>
+          <h3>Web Developement Mentor</h3>
+          <p>Oct 2024 - Present</p>
       </div>
     </div>
   </div>
@@ -226,11 +226,11 @@
   <div class="container right">
     <div class="content">
       <div class="tag">
-        <h2>CodSoft</h2>
+        <h2>Oasis Infobyte</h2>
       </div>
       <div class="desc">
-          <h3>Web Developement Intern | Internship</h3>
-          <p>May 2024 - June 2024</p>
+          <h3>Web Developement and designing Intern | Internship</h3>
+          <p>June 2023 - July 2024</p>
       </div>
     </div>
   </div>
@@ -322,14 +322,13 @@
       <div class="box">
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+91 933-575-0954</p>
-          <p> <i class="fas fa-envelope"></i>pvishwakarma150904
+          <p> <i class="fas fa-envelope"></i>pvishwakarma1509
             @gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Lucknow, India-226021</p>
           <div class="share">
 
               <a href="https://www.linkedin.com/in/p-vish/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/pvishwakarma09" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="https://youtube.com/@PvCoding09?si=RDqaiQyKctSkDLL4" class="fab fa-youtube" aria-label="YouTube" target="_blank"></a>
           </div>
       </div>
   </div>
