update About Section

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </div>
     <div class="content">
         <h3>I'm Prem</h3>
-        <span class="tag">Computer Science & Engineering Student</span>
+        <span class="tag">Web Developer , MERN Stack Enthusiast </span>
         
-        <p>I am an aspiring Web Developement. 
-          Currently purusing Bachelor of Technology (Computer Science and Engineering).
+        <p>I Am An Aspiring Software Engineer. 
+          Currently Purusing Bachelor of Technology (Computer Science and Engineering).
           I am very passionate about improving my coding skills & building Responsive Website and Learn New Technologies.
           Working for myself to improve my skills.
           Love to explore new fields.</p>
