--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="content">
         <h3>I'm Prem</h3>
-        <span class="tag">Web Developer , MERN Stack Enthusiast </span>
+        <span class="tag">Web Developer</span>
         
         <p>I Am An Aspiring Software Engineer. 
           Currently Purusing Bachelor of Technology (Computer Science and Engineering).
