--- a/experience/index.html
+++ b/experience/index.html
@@ -43,8 +43,19 @@
   </div>
 
   <div class="timeline">
-
     <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Binary Brains Technical Club</h2>
+        </div>
+        <div class="desc">
+          <h3>Technical Team </h3>
+          <p>Nov 2024 - Present</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container right">
       <div class="content">
         <div class="tag">
           <h2>Google Developer Group</h2>
